--- a/GBEmu/GBEmu/Base.lproj/Main.storyboard
+++ b/GBEmu/GBEmu/Base.lproj/Main.storyboard
@@ -669,10 +669,10 @@
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="RootViewController" customModule="GBEmu" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="577" height="428"/>
+                        <rect key="frame" x="0.0" y="0.0" width="802" height="428"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fB3-7y-Bdf">
+                            <scrollView autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fB3-7y-Bdf">
                                 <rect key="frame" x="20" y="20" width="343" height="388"/>
                                 <clipView key="contentView" misplaced="YES" id="Ie8-K0-Xvd">
                                     <rect key="frame" x="1" y="0.0" width="238" height="134"/>
@@ -717,7 +717,7 @@
                                                     </prototypeCellViews>
                                                 </tableColumn>
                                                 <tableColumn identifier="Value" width="116" minWidth="40" maxWidth="1000" id="25I-bq-sBr">
-                                                    <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Value">
+                                                    <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Dec">
                                                         <font key="font" metaFont="smallSystem"/>
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                         <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
@@ -793,7 +793,7 @@
                                     <rect key="frame" x="1" y="119" width="223" height="15"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
-                                <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="on4-N2-R0B">
+                                <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="on4-N2-R0B">
                                     <rect key="frame" x="224" y="17" width="15" height="102"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
@@ -802,7 +802,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableHeaderView>
                             </scrollView>
-                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TqY-8c-WUu">
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="TqY-8c-WUu">
                                 <rect key="frame" x="441" y="13" width="122" height="32"/>
                                 <buttonCell key="cell" type="push" title="run next step" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Fd8-Xw-Qax">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -812,9 +812,38 @@
                                     <action selector="runNextStep:" target="XfG-lQ-9wD" id="aKv-Kv-9f3"/>
                                 </connections>
                             </button>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Lpr-1X-Z6g">
+                                <rect key="frame" x="371" y="391" width="156" height="17"/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="last executed instruction" id="qSv-2J-hxK">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MHO-IM-jIk">
+                                <rect key="frame" x="373" y="366" width="154" height="17"/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="{Instruction}" id="AFK-mj-wfE">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
                         </subviews>
+                        <constraints>
+                            <constraint firstItem="fB3-7y-Bdf" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="20" symbolic="YES" id="5qT-Af-hvx"/>
+                            <constraint firstItem="Lpr-1X-Z6g" firstAttribute="leading" secondItem="fB3-7y-Bdf" secondAttribute="trailing" constant="10" id="GJ7-J6-L7O"/>
+                            <constraint firstItem="TqY-8c-WUu" firstAttribute="leading" secondItem="fB3-7y-Bdf" secondAttribute="trailing" constant="84" id="MW3-Dw-szF"/>
+                            <constraint firstItem="fB3-7y-Bdf" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" symbolic="YES" id="N0b-IX-sRw"/>
+                            <constraint firstAttribute="bottom" secondItem="fB3-7y-Bdf" secondAttribute="bottom" constant="20" symbolic="YES" id="Qwp-KJ-AjP"/>
+                            <constraint firstItem="Lpr-1X-Z6g" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="373" id="VSQ-6Y-SJN"/>
+                            <constraint firstItem="TqY-8c-WUu" firstAttribute="bottom" secondItem="fB3-7y-Bdf" secondAttribute="bottom" id="jEp-5o-otE"/>
+                            <constraint firstItem="MHO-IM-jIk" firstAttribute="leading" secondItem="fB3-7y-Bdf" secondAttribute="trailing" constant="12" id="m3G-yD-fcy"/>
+                            <constraint firstItem="fB3-7y-Bdf" firstAttribute="top" secondItem="Lpr-1X-Z6g" secondAttribute="top" id="tk8-Xf-xmK"/>
+                            <constraint firstItem="MHO-IM-jIk" firstAttribute="top" secondItem="Lpr-1X-Z6g" secondAttribute="bottom" constant="8" symbolic="YES" id="uh1-xC-rGD"/>
+                        </constraints>
                     </view>
                     <connections>
+                        <outlet property="lastInstructionLabel" destination="MHO-IM-jIk" id="8yi-wV-cza"/>
                         <outlet property="registerTableView" destination="5XU-7k-QU9" id="cJ2-Bd-C3L"/>
                         <outlet property="registerTableViewDataSource" destination="cuX-0U-Zhm" id="74q-vo-EeA"/>
                     </connections>
@@ -822,7 +851,7 @@
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
                 <customObject id="cuX-0U-Zhm" customClass="RegisterTableViewDelegate" customModule="GBEmu" customModuleProvider="target"/>
             </objects>
-            <point key="canvasLocation" x="123.5" y="734"/>
+            <point key="canvasLocation" x="236" y="734"/>
         </scene>
     </scenes>
 </document>
